Part 1 - Setting up the Module Structure

--- a/settings.gradle
+++ b/settings.gradle
@@ -14,3 +14,13 @@ dependencyResolutionManagement {
 }
 rootProject.name = "calory"
 include ':app'
+include ':core'
+include ':core:core_base'
+include ':core:core_ui'
+include ':onboarding'
+include ':onboarding:onboarding_presentation'
+include ':onboarding:onboarding_domain'
+include ':tracker'
+include ':tracker:tracker_data'
+include ':tracker:tracker_domain'
+include ':tracker:tracker_presentation'
