--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        compose_version = '1.1.0-beta01'
+        compose_version = '1.1.0-rc01'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
